# pico-switch-multi

./: .gitignore  controller_color_config.h  pyproject.toml  switch-pico.cpp  switch_pro_descriptors.h  switch_pro_driver.cpp  switch_pro_driver.h  tusb_config.h
src/switch_pico_bridge/: controller_uart_bridge_v2.py  switch_pico_uart.py
tools/: multi8_neutral_test.py  multi8_uart_test.py
