[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "switch-pico-bridge"
version = "0.1.0"
description = "SDL2-to-UART host bridge and helpers for the switch-pico firmware."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Switch Pico Maintainers" }]
dependencies = [
    "pyserial",
    "PySDL3",
    "rich",
]

[project.scripts]
controller-uart-bridge = "switch_pico_bridge.controller_uart_bridge_v2:main"
host-uart-logger = "switch_pico_bridge.host_uart_logger:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["switch_pico_bridge*"]

[tool.setuptools.package-data]
switch_pico_bridge = ["controller_db/gamecontrollerdb.txt"]
